--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 <img src="president.jpg" alt="Our president" class="center">
 <p>This is our president and founder of our nation.</p>
 <p>If you want to learn more about our nation,please use the navbar.</p>
-<script src="idex.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
