--- a/national_bank.html
+++ b/national_bank.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
   <link rel="shortcut icon" type="image/png" href="favicon.png"/>
   <title>Republic of Ivanistan</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="index.css" type="text/css" rel="stylesheet">
 </head>
 <body>
@@ -22,5 +23,8 @@
 <p>National bank is the main controller of our national currency the ivanistan dinar(IID) and the regulatory body of all banks operating in side of our country,also the regulation,distribution of our national credit card the IIC.</p>
 <p>Our exchange rate is 1 IID to 15 RSD.</p>
 <p>Or compared to the euro it's 7.836 IID to 1 e.</p>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
