--- a/constitution.html
+++ b/constitution.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+  <meta charset="UTF-8">
+  <link rel="shortcut icon" type="image/png" href="resources/images/favicon.png"/>
   <title>Republic of Ivanistan</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link href="index.css" type="text/css" rel="stylesheet">
+  <link href="resources/css/index.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     	<ul>
@@ -23,7 +23,7 @@
                     <h1>Constitution of the Republic of<br> 
                                 Ivanistan</h1>
           <div id="mail">
-                                <a href="Constitution of Ivanistan 23_9_2018.docx" class="download">download our constitution</a>
+                                <a href="resources/doc/Constitution of Ivanistan 23_9_2018.docx" class="download">download our constitution</a>
           </div>
                                 <p>
             Chapter I state definition<br>
