--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+  <meta charset="UTF-8">
+  <link rel="shortcut icon" type="image/png" href="resources/images/favicon.png"/>
   <title>Republic of Ivanistan</title>
-  <link href="index.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="resources/css/index.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     	<ul>
@@ -19,13 +19,13 @@
         <li><a href="government_agencies.html">Government Agencies</a></li>
       </ul>
               <h1>Republic of Ivanistan</h1>
-<img src="flag.jpg" alt="Our Flag" class="center">
+<img src="resources/images/flag.jpg" alt="Our Flag" class="center">
 <p>Republic of Ivanistan is a micronation located in the Balkan peninsula it borders only one country Republic of Serbia.</p>
 <p>Official time in the Republic of Ivanistan is:</p><p id="time"></p>
-<img src="president.jpg" alt="Our president" class="center">
+<img src="resources/images/president.jpg" alt="Our president" class="center">
 <p>This is our president and founder of our nation.</p>
 <p>If you want to learn more about our nation,please use the navbar.</p>
-<script src="index.js"></script>
+<script src="resources/js/index.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
