--- a/the_presedent.html
+++ b/the_presedent.html
@@ -3,10 +3,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+  <link rel="shortcut icon" type="image/png" href="resources/images/favicon.png"/>
   <title>Republic of Ivanistan</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link href="index.css" type="text/css" rel="stylesheet">
+  <link href="resources/css/index.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     	<ul>
@@ -19,7 +19,7 @@
         <li><a href="government_agencies.html">Government Agencies</a></li>
       </ul>
 <p>Our current president and founder is Ivan Lukic and his age is 14 years old goes to highschool he founded this country for a school project and fell in love with micronationalism.</p>
-<img src="president.jpg" alt="Our president" class="center">
+<img src="resources/images/president.jpg" alt="Our president" class="center">
 <p>His plans are to study internationally and his interests are computer science,chemistry and politics </p>
 <p>In chemistry he joined many competitions and was the third in the Serbian chemistry association competition.</p>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
