--- a/index.html
+++ b/index.html
@@ -1,33 +1,64 @@
-<!--THIS SITE IS OWNED BY THE REPUBLIC OF IVANISTAN USE IS ALLOWED BUT COPYING IS NOT-->
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <link rel="shortcut icon" type="image/png" href="resources/images/favicon.png"/>
-  <title>Republic of Ivanistan</title>
+    <link rel="icon" type="image/png" href="resources/images/favicon.png" />
+  </head>
+  <div>
+      <title>Republic of Ivanistan</title>
+  </div>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link href="resources/css/index.css" type="text/css" rel="stylesheet">
+ <!-- Custom styles for this template -->
+ <link href="resources/css/sticky-footer-navbar.css" rel="stylesheet">
+ <meta charset="UTF-8">
 </head>
 <body>
-    	<ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="constitution.html">Our Constitution</a></li>
-        <li><a href="the_presedent.html">Our Presedent</a></li>
-        <li><a href="diplomacy.html">Diplomacy</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="government.html">Government</a></li>
-        <li><a href="government_agencies.html">Government Agencies</a></li>
-      </ul>
-              <h1>Republic of Ivanistan</h1>
-<img src="resources/images/flag.jpg" alt="Our Flag" class="center">
-<p>Republic of Ivanistan is a micronation located in the Balkan peninsula it borders only one country Republic of Serbia.</p>
-<p>Official time in the Republic of Ivanistan is:</p><p id="time"></p>
-<img src="resources/images/president.jpg" alt="Our president" class="center">
-<p>This is our president and founder of our nation.</p>
-<p>If you want to learn more about our nation,please use the navbar.</p>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="index.html">Home</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="constitution.html">Our Constitution <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="the_presedent.html">Our Presedent</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="diplomacy.html">Diplomacy</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="news.html">News</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="government.html">Government</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="government_agencies.html">Government Agencies</a>
+                        </li>
+              </ul>
+            </div>
+          </nav>
+        </header>
+   
+    <main role="main" class="container">
+        <h1 class="text-center">Republic of Ivanistan</h1>
+<div>
+        <img src="resources/images/flag.jpg" class="rounded mx-auto d-block" alt="flag">
+    </div>
+        <p class="lead text-center">Republic of Ivanistan is a micronation located in the Balkan peninsula it borders only one country Republic of Serbia.</p>
+        <p class="lead text-center">Official time in the Republic of Ivanistan is:</p><p class="lead text-center" id="time"><strong></strong></p>
+        <img src="resources/images/president.jpg" alt="Our president" class="rounded mx-auto d-block">
+        <p class="lead text-center">This is our president and founder of our nation.</p>
+        <p class="lead text-center">If you want to learn more about our nation,please use the navbar.</p>
+
+        </main>
+  <script src="resources/js/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="resources/js/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="resources/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="resources/js/index.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
