Please enter the commit message for your changes. Lines starting  with '#' will be ignored, and an empty message aborts the commit.
 On branch master
 Your branch is up to date with 'origin/master'.

 Changes to be committed:
	modified:   constitution.html
	modified:   diplomacy.html#
        modified:   government.html
	modified:   government_agencies.html
	modified:   index.html
	modified:   national_bank.html
	new file:   navbar.html
	modified:   news.html
	modified:   resources/css/index.css
	new file:   resources/css/sticky-footer-navbar.css
	new file:   resources/js/bootstrap.min.js
	new file:   resources/js/jquery-3.3.1.slim.min.js
	new file:   resources/js/navbar.html
	new file:   resources/js/navbar.js
	new file:   resources/js/popper.min.js
	modified:   the_presedent.html

--- a/diplomacy.html
+++ b/diplomacy.html
@@ -1,25 +1,53 @@
-<!--THIS SITE IS OWNED BY THE REPUBLIC OF IVANISTAN USE IS ALLOWED BUT COPYING IS NOT-->
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <link rel="shortcut icon" type="image/png" href="resources/images/favicon.png"/>
-  <title>Republic of Ivanistan</title>
+    <link rel="icon" type="image/png" href="resources/images/favicon.png" />
+  </head>
+  <div>
+      <title>Republic of Ivanistan</title>
+  </div>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link href="resources/css/index.css" type="text/css" rel="stylesheet">
+ <!-- Custom styles for this template -->
+ <link href="resources/css/sticky-footer-navbar.css" rel="stylesheet">
+ <meta charset="UTF-8">
 </head>
 <body>
-    	<ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="constitution.html">Our Constitution</a></li>
-        <li><a href="the_presedent.html">Our Presedent</a></li>
-        <li><a href="diplomacy.html">Diplomacy</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="government.html">Government</a></li>
-        <li><a href="government_agencies.html">Government Agencies</a></li>
-      </ul>
-<h1>Diplomacy</h1>
-              <p>
+        <header>
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand" href="index.html">Home</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                  
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                      <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                          <a class="nav-link" href="constitution.html">Our Constitution <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="the_presedent.html">Our Presedent</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="diplomacy.html">Diplomacy</a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link" href="news.html">News</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="government.html">Government</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="government_agencies.html">Government Agencies</a>
+                                </li>
+                      </ul>
+                    </div>
+                  </nav>
+                </header>
+   
+    <main role="main" class="container">
+        <div class="lead text-center">
+            <h1>Diplomacy</h1>
+            <p>
 Diplomacy is a very important tool for all micronations for their self development and recognition.<br>
 As such the Republic of Ivanistan is seeking recognition from other micronations.<br>
 We will recognise anyone that fulfils our standards:<br>
@@ -27,10 +55,12 @@ We will recognise anyone that fulfils our standards:<br>
 2)In compliance with UN human rights.</p>
 <p>All diplomatic contact must not be written in capital letters and or use swear words and threats.</p>
 <div id="mail">
-<a href = "mailto: repofivanistan@yahoo.com">Send us a diplomatic request</a>
+<p>Send us a diplomatic request to:repofivanistan@yahoo.com</p>
 </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        </main>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="resources/js/index.js"></script>
 </body>
 </html>
