--- a/government.html
+++ b/government.html
@@ -1,43 +1,74 @@
-<!--THIS SITE IS OWNED BY THE REPUBLIC OF IVANISTAN USE IS ALLOWED BUT COPYING IS NOT-->
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <link rel="shortcut icon" type="image/png" href="resources/images/favicon.png"/>
-  <title>Republic of Ivanistan</title>
+    <link rel="icon" type="image/png" href="resources/images/favicon.png" />
+  </head>
+  <div>
+      <title>Republic of Ivanistan</title>
+  </div>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link href="resources/css/index.css" type="text/css" rel="stylesheet">
+ <!-- Custom styles for this template -->
+ <link href="resources/css/sticky-footer-navbar.css" rel="stylesheet">
+ <meta charset="UTF-8">
 </head>
 <body>
-    	<ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="constitution.html">Our Constitution</a></li>
-        <li><a href="the_presedent.html">Our Presedent</a></li>
-        <li><a href="diplomacy.html">Diplomacy</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="government.html">Government</a></li>
-        <li><a href="government_agencies.html">Government Agencies</a></li>
-      </ul>
-<h1>GOVERNMENT</h1>
-<p>
-Our government is divided into several different parts which include:<br>
-1)Parliament witch holds the legislative powers in the republic.<br>
-The parliament hold 40 people which are appointed by the president and on its head is the president.<br>
-2)Cabinet of ministers witch has 9 ministries witch include:<br>
-       a.Ministry of defence,<br>
-         b.Ministry of foreign relations,<br>
-         c.Ministry economy and agriculture,<br>
-         d.Ministry of infrastructure and traffic,<br>
-         e.Ministry of taxation,<br>
-         f.Ministry of labor,social standards,<br>
-         g.Ministry of internal affairs,<br>
-         h.Ministry of education and general standards,<br>
-i.Ministry of law and country building.<br>
-3.Supreme court which holds judicial powers in the republic and has tree people representing it which are the president and 2 people appointed from the parliament.<br>
-
-</p>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <header>
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand" href="index.html">Home</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                  
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                      <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                          <a class="nav-link" href="constitution.html">Our Constitution <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="the_presedent.html">Our Presedent</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="diplomacy.html">Diplomacy</a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link" href="news.html">News</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="government.html">Government</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="government_agencies.html">Government Agencies</a>
+                                </li>
+                      </ul>
+                    </div>
+                  </nav>
+                </header>
+   
+    <main role="main" class="container">
+        <div class="lead text-center">
+                <h1>GOVERNMENT</h1>
+                <p>
+                Our government is divided into several different parts which include:<br>
+                1)Parliament witch holds the legislative powers in the republic.<br>
+                The parliament hold 40 people which are appointed by the president and on its head is the president.<br>
+                2)Cabinet of ministers witch has 9 ministries witch include:<br>
+                       a.Ministry of defence,<br>
+                         b.Ministry of foreign relations,<br>
+                         c.Ministry economy and agriculture,<br>
+                         d.Ministry of infrastructure and traffic,<br>
+                         e.Ministry of taxation,<br>
+                         f.Ministry of labor,social standards,<br>
+                         g.Ministry of internal affairs,<br>
+                         h.Ministry of education and general standards,<br>
+                i.Ministry of law and country building.<br>
+                3.Supreme court which holds judicial powers in the republic and has tree people representing it which are the president and 2 people appointed from the parliament.<br>
+                
+                </p>
+</div>
+        </main>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="resources/js/index.js"></script>
 </body>
 </html>
