--- a/news.html
+++ b/news.html
@@ -1,59 +1,91 @@
-<!--THIS SITE IS OWNED BY THE REPUBLIC OF IVANISTAN USE IS ALLOWED BUT COPYING IS NOT-->
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <link rel="shortcut icon" type="image/png" href="resources/images/favicon.png"/>
-  <title>Republic of Ivanistan</title>
+    <link rel="icon" type="image/png" href="resources/images/favicon.png" />
+  </head>
+  <div>
+      <title>Republic of Ivanistan</title>
+  </div>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link href="resources/css/index.css" type="text/css" rel="stylesheet">
+ <!-- Custom styles for this template -->
+ <link href="resources/css/sticky-footer-navbar.css" rel="stylesheet">
+ <meta charset="UTF-8">
 </head>
 <body>
-    	<ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="constitution.html">Our Constitution</a></li>
-        <li><a href="the_presedent.html">Our Presedent</a></li>
-        <li><a href="diplomacy.html">Diplomacy</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="government.html">Government</a></li>
-        <li><a href="government_agencies.html">Government Agencies</a></li>
-      </ul>
-<h1>News</h1>
-<div class="news">
- <h2>
-23/9/2018 Our Republic was founded and its constitution put into force
-</h2>
-<p>
-Our Republics president declared international independence thus creating the country of Ivanistan and on the same day he put forward the constitution which you can see here
-  <br><a href="constitution.html">Our Constitution</a> 
-</p>
-<h2>
-  1/10/2018 Our first site was created
-</h2>
-<p>
-Our site was created with the purpose of expanding the public knowledge about us.
-</p>
-<h2>
-2/5/2019 We decided improve diplomatic relationships with other micronations.
-</h2>
-<p>
-We sent many letters to many micronations in the hope of getting support from them.
-</p>
-<h2>
-14/6/2019 After an exhausting year our parliament went on a vacation.
-</h2>
-<p>
-Our parliament and its members are going to have a rest from an exhausting year of activities and will be returning shortly. 
-</p>
-<h2>
-5/10/2019 Our country got a new website.
-</h2>
-<p>
-Please feel free to explore around to see our new website.
-</p>
-</div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <header>
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand" href="index.html">Home</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                  
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                      <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                          <a class="nav-link" href="constitution.html">Our Constitution <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="the_presedent.html">Our Presedent</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="diplomacy.html">Diplomacy</a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link" href="news.html">News</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="government.html">Government</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="government_agencies.html">Government Agencies</a>
+                                </li>
+                      </ul>
+                    </div>
+                  </nav>
+                </header>
+   
+    <main role="main" class="container">
+        <h1 class="text-center">News</h1>
+
+        
+        <div class="lead text-center border border-dark">
+         <h2>
+        23/9/2018 Our Republic was founded and its constitution put into force
+        </h2>
+        <p>
+        Our Republics president declared international independence thus creating the country of Ivanistan and on the same day he put forward the constitution which you can see here
+          <br><a href="constitution.html">Our Constitution</a> 
+        </p>
+        <h2>
+          1/10/2018 Our first site was created
+        </h2>
+        <p>
+        Our site was created with the purpose of expanding the public knowledge about us.
+        </p>
+        <h2>
+        2/5/2019 We decided improve diplomatic relationships with other micronations.
+        </h2>
+        <p>
+        We sent many letters to many micronations in the hope of getting support from them.
+        </p>
+        <h2>
+        14/6/2019 After an exhausting year our parliament went on a vacation.
+        </h2>
+        <p>
+        Our parliament and its members are going to have a rest from an exhausting year of activities and will be returning shortly. 
+        </p>
+        <h2>
+        5/10/2019 Our country got a new website.
+        </h2>
+        <p>
+        Please feel free to explore around to see our new website.
+        </p>
+        </div>
+
+        </main>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="resources/js/index.js"></script>
 </body>
 </html>
