--- a/constitution.html
+++ b/constitution.html
@@ -366,6 +366,12 @@ telecommunication,power and water networks.</p>
 <a href="resources/docx/Constitution of Ivanistan 23_9_2018.docx" class="download">download our constitution</a>
 
 </div>
+<div class="container-fluid">
+  <h2>A national state of emergency has been declared on 16.march 2020 and lasts 3 months to 16.june 2020 due to COVID-19
+    current orders are to stay at home and listen to the recomendations given by the <a href="National_state_of_emergency.html">government</a> 
+  </h2>
+ </div>
+
         </main>
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
