--- a/national_bank.html
+++ b/national_bank.html
@@ -64,7 +64,11 @@
             <p>Or compared to the euro it's 7.836 IID to 1 e.</p>
 </div>>
 
-
+<div class="container-fluid">
+  <h2>A national state of emergency has been declared on 16.march 2020 and lasts 3 months to 16.june 2020 due to COVID-19
+    current orders are to stay at home and listen to the recomendations given by the <a href="National_state_of_emergency.html">government</a> 
+  </h2>
+ </div>
 
 </main>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
