--- a/news.html
+++ b/news.html
@@ -90,8 +90,11 @@
         <p>
         Please feel free to explore around to see our new website.
         </p>
+        <h2>16/3/2020 A National state of emergency</h2>
+        <p>A national state of emergency has been declared on 16.march 2020 and lasts 3 months to 16.june 2020 due to COVID-19
+          current orders are to stay at home and listen to the recomendations given by the <a href="National_state_of_emergency.html">government</a> </p>
         </div>
-
+ 
         </main>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
