--- a/the_presedent.html
+++ b/the_presedent.html
@@ -62,9 +62,13 @@
         <img src="resources/images/president.jpg" alt="Our president">
         <p class="lead">His plans are to study internationally and his interests are computer science,chemistry and politics </p>
         <p class="lead">In chemistry he joined many competitions and was the third in the Serbian chemistry association competition.</p>
-</div>>
+</div>
 
-
+<div class="container-fluid">
+  <h2>A national state of emergency has been declared on 16.march 2020 and lasts 3 months to 16.june 2020 due to COVID-19
+    current orders are to stay at home and listen to the recomendations given by the <a href="National_state_of_emergency.html">government</a> 
+  </h2>
+ </div>
 
 </main>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
