modified:   National_state_of_emergency.html 	modified:   constitution.html 	modified:   diplomacy.html 	modified:   government.html 	modified:   government_agencies.html 	modified:   index.html 	modified:   national_bank.html 	modified:   news.html 	modified:   the_presedent.html

--- a/government_agencies.html
+++ b/government_agencies.html
@@ -67,10 +67,10 @@
             The Army is the force whitch guards the territory of our nation from external attack.<br>
             The Mail service is for delivering official and unofficial mail to our people.<br>
             </p>
-</div>>
+</div>
 <div class="container-fluid">
   <h2>A national state of emergency has been declared on 16.march 2020 and lasts 3 months to 16.june 2020 due to COVID-19
-    current orders are to stay at home and listen to the recomendations given by the <a href="National_state_of_emergency.html">government</a> 
+    current orders are to stay at home and listen to the recommendations given by the <a href="National_state_of_emergency.html">government</a> 
   </h2>
  </div>
 
