--- a/news.html
+++ b/news.html
@@ -92,7 +92,7 @@
         </p>
         <h2>16/3/2020 A National state of emergency</h2>
         <p>A national state of emergency has been declared on 16.march 2020 and lasts 3 months to 16.june 2020 due to COVID-19
-          current orders are to stay at home and listen to the recomendations given by the <a href="National_state_of_emergency.html">government</a> </p>
+          current orders are to stay at home and listen to the recommendations given by the <a href="National_state_of_emergency.html">government</a> </p>
         </div>
  
         </main>
