--- a/diplomacy.html
+++ b/diplomacy.html
@@ -60,7 +60,7 @@
             <p>
 Diplomacy is a very important tool for all micronations for their self development and recognition.<br>
 As such the Republic of Ivanistan is seeking recognition from other micronations.<br>
-We will recognise anyone that fulfils our standards:<br>
+We will recognize anyone that fulfils our standards:<br>
 1)It must have its constitution for at least 2 months.<br>
 2)In compliance with UN human rights.</p>
 <p>All diplomatic contact must not be written in capital letters and or use swear words and threats.</p>
@@ -69,7 +69,7 @@ We will recognise anyone that fulfils our standards:<br>
 </div>
 <div class="container-fluid">
   <h2>A national state of emergency has been declared on 16.march 2020 and lasts 3 months to 16.june 2020 due to COVID-19
-    current orders are to stay at home and listen to the recomendations given by the <a href="National_state_of_emergency.html">government</a> 
+    current orders are to stay at home and listen to the recommendations given by the <a href="National_state_of_emergency.html">government</a> 
   </h2>
  </div>
 
